# py-lichat

./: .gitignore  README.md  README.mess  main.py  pyproject.toml  release.py  setup.py
pylichat/: __init__.py  __main__.py  client.py  symbol.py  toolkit.py  update.py  wire.py
pylichat/spec/: README.mess
