[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pylichat"
version = "1.4"
authors = [
  { name="Yukari Hafner", email="shinmera@tymoon.eu" },
  { name="Georgiy Tugai", email="georgiy@crossings.link" }
]
description = "A library for the Lichat protocol"
readme = {"file" = "README.mess", "content-type" = "text/plain"}
requires-python = ">=3.7"
license = "zlib"
classifiers = [
  "License :: OSI Approved :: zlib/libpng License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Development Status :: 5 - Production/Stable",
  "Topic :: Internet"
]

[project.urls]
"Homepage" = "https://github.com/shirakumo/py-lichat"
"Bug Tracker" = "https://github.com/shirakumo/py-lichat/issues"

[project.scripts]
pylichat = "pylichat.__main__:main"